--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body>
     <main class="page">
       <section class="card" id="card">
-        <p class="eyebrow">hey Mehrsa</p>
+        <p class="eyebrow">hey Mehrsa 🥵</p>
         <h1 class="title">Will you be my Valentine?</h1>
-        <p class="subtitle">I have a whole day planned just for you.</p>
+        <p class="subtitle">I have a whole day planned just for you 😁</p>
         <div class="gif-wrap">
           <div
             class="tenor-gif-embed"
